Test framework tests plus started tests for TennisMachine

--- a/Software/src/Makefile
+++ b/Software/src/Makefile
@@ -1,16 +1,31 @@
 SOURCES = main.cpp \
 	mock_arduino.cpp \
 	TestSupport.cpp \
-	WordBuffer.cpp \
-	WordBufferTest.cpp
+	WordBuffer.cpp WordBufferTest.cpp \
+	TennisMachine.cpp TennisMachineTest.cpp 
+
 
 OBJECTS := $(addsuffix .o, $(addprefix .build/, $(basename $(SOURCES))))
 DEPFILES := $(subst .o,.dep, $(subst .build/,.deps/, $(OBJECTS)))
 TESTCPPFLAGS = -D_TEST_ -Itest -Iarduino
 CPPDEPFLAGS = -MMD -MP -MF .deps/$(subst .allsrc/,,$(basename $<)).dep
-RUNTEST := $(if $(COMSPEC), runtest.exe, runtest)
+RUNTEST := $(if $(COMSPEC), runtests.exe, runtests)
 
-all: run
+
+
+FSOURCES = testFramework.cpp \
+	mock_arduino.cpp \
+	TestSupport.cpp TestSupportTest.cpp
+
+FOBJECTS := $(addsuffix .o, $(addprefix .build/, $(basename $(FSOURCES))))
+FDEPFILES := $(subst .o,.dep, $(subst .build/,.deps/, $(FOBJECTS)))
+FTESTCPPFLAGS = -D_TEST_ -Itest -Iarduino
+FCPPDEPFLAGS = -MMD -MP -MF .deps/$(subst .allsrc/,,$(basename $<)).dep
+FRUNTEST := $(if $(COMSPEC), frameworktest.exe, frameworktest)
+
+
+
+all: runframeworktest run
 
 .build/%.o: .allsrc/%.cpp
 	mkdir -p .deps/$(dir $<)
@@ -19,9 +34,9 @@ all: run
 
 compile: copy $(OBJECTS)
 
+fcompile: copy $(FOBJECTS)
+
 copy:
-	@echo "o" $(OBJECTS)
-	@echo "d" $(DEPFILES)
 	mkdir -p .allsrc
 	-cp test/* .allsrc 
 	-cp morse/* .allsrc
@@ -31,10 +46,16 @@ runtests: compile
 
 run: runtests
 	./runtests
+
+runframeworktest: frameworktest
+	./frameworktest
 	
+	
+frameworktest: fcompile
+	$(CC) $(FOBJECTS) -lstdc++ -o $@
 	
 clean:
-	@rm -rf .deps/ .build/ .allsrc $(RUNTEST)
+	@rm -rf .deps/ .build/ .allsrc $(RUNTEST) $(FRUNTEST)
 
 -include $(DEPFILES)
 
