--- a/Documentation/User Manual/src/Makefile
+++ b/Documentation/User Manual/src/Makefile
@@ -2,10 +2,14 @@ SOURCES = m32_user-Manual.adoc \
 	m32_user-Manual_de.adoc
 
 
-TARGETS := $(addsuffix .html, $(basename $(SOURCES)))
+TARGETS := $(addsuffix .html, $(basename $(SOURCES))) \
+	$(addsuffix .pdf, $(basename $(SOURCES)))
 
 %.html: %.adoc
 	asciidoctor -b html5 $<
+
+%.pdf: %.adoc
+	asciidoctor-pdf -a imagesdir=Images -a pdf-themesdir=Images $<
 
 
 all: $(TARGETS)
